--- a/web page.html
+++ b/web page.html
@@ -9,7 +9,7 @@ box-sizing: border-box;
 width: 600px;
 height: 1000px;
 padding: 3px;
-background-image: url(https://github.com/Subashini06/front-end.git/8.jpg);
+background-image: url(https://github.com/Subashini06/front-end/8.jpg);
 border: 5px solid black;
 background-size: 100% 100%;
 }
@@ -24,7 +24,7 @@ border-radius:100%;
 
 <!-- HTML -->
 <div class="background">
-<img src="https://github.com/Subashini06/front-end.git/images.jpeg"
+<img src="https://github.com/Subashini06/front-end/images.jpeg"
 width="100"
 height="125">
 <h2 style="color:white">Suresh Raina</h2>
