--- a/web page.html
+++ b/web page.html
@@ -9,7 +9,8 @@ box-sizing: border-box;
 width: 600px;
 height: 1000px;
 padding: 3px;
-background-image: url(/storage/emulated/0/RESUME_PDF/8.jpg);
+background-image: url((https://github.com/Subashini06/front-end/blob/master/8.jpg);
+);
 border: 5px solid black;
 background-size: 100% 100%;
 }
@@ -24,7 +25,7 @@ border-radius:100%;
 
 <!-- HTML -->
 <div class="background">
-<img src="/storage/emulated/0/RESUME_PDF/images.jpeg"
+<img src="https://github.com/Subashini06/front-end/blob/master/images.jpeg"
 width="100"
 height="125">
 <h2 style="color:white">Suresh Raina</h2>
