--- a/web page.html
+++ b/web page.html
@@ -50,7 +50,7 @@ raina1223@gmail.com|
 </u1>
 <h2>personal profile:-</h2>
 <u1>	<li>Dob:10/01/1997</li>
-		<li>material:single</li>
+		<li>marital status:single</li>
 		<li>Nationality:Indian</li>
 		<li>known language:Tamil,English</li>
 </u1>
