--- a/web page.html
+++ b/web page.html
@@ -9,7 +9,7 @@ box-sizing: border-box;
 width: 600px;
 height: 1000px;
 padding: 3px;
-background-image: url(https://github.com/Subashini06/front-end/8.jpg);
+background-image: url(https://github.com/Subashini06/front-end/blob/gh-pages/8.jpg);
 border: 5px solid black;
 background-size: 100% 100%;
 }
@@ -24,7 +24,7 @@ border-radius:100%;
 
 <!-- HTML -->
 <div class="background">
-<img src="https://github.com/Subashini06/front-end/images.jpeg"
+<img src="https://github.com/Subashini06/front-end/blob/gh-pages/images.jpg"
 width="100"
 height="125">
 <h2 style="color:white">Suresh Raina</h2>
@@ -33,7 +33,7 @@ raina1223@gmail.com|
 9876544321 
 </h5>
 <body style="color:white">
-<h2 style=""color:"">Education:-</h2>
+<h2>Education:-</h2>
 <ul>	<li>ABC college of technology-
 		CGPA :7.9</li>
 		<li>ABCD matric hr sec school-
@@ -56,8 +56,8 @@ raina1223@gmail.com|
 <h2>Declaration:-</h2>
 <p> 	<li>I hereby afffirm that the details mentioned in the document are true to beat of my knowledg.e</l>.</p>
 <h2></h2>
-<strong>	<li>Date:</li>
-			<li>place:</li>
+<strong><li>Date:</li>
+	<li>place:</li>
 </strong>
 </body>
 </div>
