--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@ box-sizing: border-box;
 width: 600px;
 height: 1000px;
 padding: 3px;
-background-image: url(https://github.com/Subashini06/front-end/8.jpg);
+background-image: url(https://github.com/Subashini06/front-end/blob/gh-pages/8.jpg);
 border: 5px solid black;
 background-size: 100% 100%;
 }
@@ -24,7 +24,7 @@ border-radius:100%;
 
 <!-- HTML -->
 <div class="background">
-<img src="https://github.com/Subashini06/front-end/images.jpg"
+<img src="https://github.com/Subashini06/front-end/blob/gh-pages/images.jpeg"
 width="100"
 height="125">
 <h2 style="color:white">Suresh Raina</h2>
@@ -32,7 +32,7 @@ height="125">
 raina1223@gmail.com|
 9876544321 
 </h5>
-<body style="color:white">
+<body style="color:black">
 <h2>Education:-</h2>
 <ul>	<li>ABC college of technology-
 		CGPA :7.9</li>
