--- a/web page.html
+++ b/web page.html
@@ -28,11 +28,11 @@ border-radius:100%;
 width="100"
 height="125">
 <h2 style="color:white">Suresh Raina</h2>
-<h5 style="color:white">raju gandhi street,sivan theater,Tirupur|
+<h5 style="color:white">raju gandhi street,sivan cinmas road,Chennai|
 raina1223@gmail.com|
 9876544321 
 </h5>
-<body style="color:white">
+<body style="color:black">
 <h2>Education:-</h2>
 <ul>	<li>ABC college of technology-
 		CGPA :7.9</li>
